# VectorCode

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: release.yml
docs/: cli.md  neovim.md
lua/codecompanion/: vectorcode.lua
lua/vectorcode/: cacher.lua  config.lua  init.lua  lsp.lua  types.lua  utils.lua
lua/vectorcode/cacher/: default.lua  init.lua  lsp.lua
lua/vectorcode/integrations/: codecompanion.lua  init.lua  lualine.lua
plugin/: vectorcode.lua
src/vectorcode/: chunking.py  cli_utils.py  common.py  drop.py  init.py  lsp_main.py  main.py  query.py  vectorise.py
src/vectorcode/subcommands/: check.py  drop.py  init.py  ls.py  query.py  vectorise.py
src/vectorcode/subcommands/query/: __init__.py  reranker.py
tests/: test_cli_utils.py  test_common.py
